--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "node_modules/nprogress/nprogress.css";
 
 /* width */
 ::-webkit-scrollbar {
